Fixed min height for userlist on mobile

--- a/css/modules/discord.less
+++ b/css/modules/discord.less
@@ -2,7 +2,9 @@
   width: 350px;
   margin: 0 auto;
   position: relative;
-  min-height: 320px;
+  @media (min-width: @tablet) {
+    min-height: 320px;
+  }
   h3 {
     line-height: 200%;
     text-align: center;
